--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,11 @@ jobs:
 
     steps:
 
+      - name: shorten commit id
+        shell: bash
+        run: |
+          echo "COMMIT_ID=${GITHUB_SHA::6}" >> "$GITHUB_ENV"
+
       # Log in to DockerHub
       - name: Log in to DockerHub
         uses: docker/login-action@v2
@@ -26,4 +31,4 @@ jobs:
         with:
           push: true
           tags: 
-            ${{ secrets.DOCKERHUB_USERNAME }}/python-app:${{ github.sha }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/python-app:${{ env.COMMIT_ID }}
